--- a/blog-details.html
+++ b/blog-details.html
@@ -307,8 +307,8 @@
                 <div class="col-xl-7 col-lg-8">
                     <div class="blog-comments">
                         <h4>Comments</h4>
-                        <form action="" class="comment-form mb-50 wow fadeInUp">
-                            <textarea name="comment" id="" placeholder="Your Comment..."></textarea>
+                        <form class="comment-form mb-50 wow fadeInUp">
+                            <textarea name="comment" id="comment" placeholder="Your Comment..."></textarea>
                             <button type="submit" class="ams-btn primary-btn">Comment</button>
                         </form>
                         <div class="single-comment wow fadeInUp">
