--- a/resturant.html
+++ b/resturant.html
@@ -137,7 +137,7 @@
         <div class="ams-pos-features">
             <div class="container">
                 <div class="sec-heading text-center mb-50">
-                    <h2 class="wow fadeInUp">Our Restrurent POS Sofrware</span></h2>
+                    <h2 class="wow fadeInUp">Our Restrurent POS Sofrware</h2>
                     <p class="wow zoomIn">Don’t waste time on search manual tasks. Let Automation do it for you. Simplify workflows, reduce errors, and save time.</p>
                 </div>
                 <div class="row align-items-center sec-spacer-bottom g-4">
