--- a/index.html
+++ b/index.html
@@ -89,6 +89,9 @@
                             <h1 class="wow fadeInUp">We Help You Meet Your <span class="color-text">Business</span> Goals.</h1>
                             <p class="my-4 my-xxl-5 wow fadeInUp">Lorem ipsum dolor sit amet, consectetur adipiscing elit ut aliquam, purus sit amet luctus venenatis, lectus magna fringilla urna, porttitor</p>
                             <a href="#" class="ams-btn primary-btn wow fadeInUp">Buy Now</a>
+                            <a class="vid-icon venobox vbox-item more" href="https://www.youtube.com/watch?v=yzCkM5MRaaI&amp;t=10s" id="videolink">
+                                <i class="fas fa-play"></i>
+                            </a>
                         </div>
                     </div>
                     <div class="col-lg-6 col-xxl-7">
